// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert props should match snapshot 1`] = `
<Alert
  className="class"
  type="success"
>
  <styled.div
    className="class"
    role="alert"
    tabindex="-1"
    theme={
      Object {
        "border": Object {
          "radius": Object {
            "edge": "2px",
            "round": "100px",
          },
          "size": "2px",
        },
        "breakpoint": Object {
          "lg": "992px",
          "md": "768px",
          "sm": "576px",
          "xl": "1200px",
          "xs": "0px",
        },
        "color": Object {
          "background": "#ffffff",
          "border": "#2fa4e7",
          "checked": "#2fa4e7",
          "danger": "#c71c22",
          "default": "#2fa4e7",
          "disabled": "#acacac",
          "error": "#c71c22",
          "focus": "#54b4eb",
          "font": "#333333",
          "hover": "#178acc",
          "info": "#04519b",
          "primary": "#2fa4e7",
          "secondary": "#e9ecef",
          "success": "#73a839",
          "tertiary": "#343a40",
          "warning": "#dd5600",
        },
        "font": Object {
          "family": Object {
            "default": "Helvetica, Arial, sans-serif",
          },
          "size": Object {
            "default": "1.8rem",
            "h1": "3.8rem",
            "h2": "3.1rem",
            "h3": "2.6rem",
            "h4": "2.3rem",
            "h5": "2.2rem",
            "h6": "2.1rem",
          },
          "weight": Object {
            "default": 100,
          },
        },
      }
    }
    type="success"
  >
    <div
      className="class sc-bdVaJa ixHSHX"
      role="alert"
      type="success"
    >
      Hello
    </div>
  </styled.div>
</Alert>
`;

exports[`Alert snapshot basic 1`] = `
<Alert
  className="class"
>
  <styled.div
    className="class"
    role="alert"
    tabindex="-1"
    theme={
      Object {
        "border": Object {
          "radius": Object {
            "edge": "2px",
            "round": "100px",
          },
          "size": "2px",
        },
        "breakpoint": Object {
          "lg": "992px",
          "md": "768px",
          "sm": "576px",
          "xl": "1200px",
          "xs": "0px",
        },
        "color": Object {
          "background": "#ffffff",
          "border": "#2fa4e7",
          "checked": "#2fa4e7",
          "danger": "#c71c22",
          "default": "#2fa4e7",
          "disabled": "#acacac",
          "error": "#c71c22",
          "focus": "#54b4eb",
          "font": "#333333",
          "hover": "#178acc",
          "info": "#04519b",
          "primary": "#2fa4e7",
          "secondary": "#e9ecef",
          "success": "#73a839",
          "tertiary": "#343a40",
          "warning": "#dd5600",
        },
        "font": Object {
          "family": Object {
            "default": "Helvetica, Arial, sans-serif",
          },
          "size": Object {
            "default": "1.8rem",
            "h1": "3.8rem",
            "h2": "3.1rem",
            "h3": "2.6rem",
            "h4": "2.3rem",
            "h5": "2.2rem",
            "h6": "2.1rem",
          },
          "weight": Object {
            "default": 100,
          },
        },
      }
    }
  >
    <div
      className="class sc-bdVaJa bNEser"
      role="alert"
    >
      Hello
    </div>
  </styled.div>
</Alert>
`;

exports[`Alert snapshot danger 1`] = `
<Alert
  className="class"
  type="danger"
>
  <styled.div
    className="class"
    role="alert"
    tabindex="-1"
    theme={
      Object {
        "border": Object {
          "radius": Object {
            "edge": "2px",
            "round": "100px",
          },
          "size": "2px",
        },
        "breakpoint": Object {
          "lg": "992px",
          "md": "768px",
          "sm": "576px",
          "xl": "1200px",
          "xs": "0px",
        },
        "color": Object {
          "background": "#ffffff",
          "border": "#2fa4e7",
          "checked": "#2fa4e7",
          "danger": "#c71c22",
          "default": "#2fa4e7",
          "disabled": "#acacac",
          "error": "#c71c22",
          "focus": "#54b4eb",
          "font": "#333333",
          "hover": "#178acc",
          "info": "#04519b",
          "primary": "#2fa4e7",
          "secondary": "#e9ecef",
          "success": "#73a839",
          "tertiary": "#343a40",
          "warning": "#dd5600",
        },
        "font": Object {
          "family": Object {
            "default": "Helvetica, Arial, sans-serif",
          },
          "size": Object {
            "default": "1.8rem",
            "h1": "3.8rem",
            "h2": "3.1rem",
            "h3": "2.6rem",
            "h4": "2.3rem",
            "h5": "2.2rem",
            "h6": "2.1rem",
          },
          "weight": Object {
            "default": 100,
          },
        },
      }
    }
    type="danger"
  >
    <div
      className="class sc-bdVaJa eCZaEW"
      role="alert"
      type="danger"
    >
      Hello
    </div>
  </styled.div>
</Alert>
`;

exports[`Alert snapshot info 1`] = `
<Alert
  className="class"
  type="info"
>
  <styled.div
    className="class"
    role="alert"
    tabindex="-1"
    theme={
      Object {
        "border": Object {
          "radius": Object {
            "edge": "2px",
            "round": "100px",
          },
          "size": "2px",
        },
        "breakpoint": Object {
          "lg": "992px",
          "md": "768px",
          "sm": "576px",
          "xl": "1200px",
          "xs": "0px",
        },
        "color": Object {
          "background": "#ffffff",
          "border": "#2fa4e7",
          "checked": "#2fa4e7",
          "danger": "#c71c22",
          "default": "#2fa4e7",
          "disabled": "#acacac",
          "error": "#c71c22",
          "focus": "#54b4eb",
          "font": "#333333",
          "hover": "#178acc",
          "info": "#04519b",
          "primary": "#2fa4e7",
          "secondary": "#e9ecef",
          "success": "#73a839",
          "tertiary": "#343a40",
          "warning": "#dd5600",
        },
        "font": Object {
          "family": Object {
            "default": "Helvetica, Arial, sans-serif",
          },
          "size": Object {
            "default": "1.8rem",
            "h1": "3.8rem",
            "h2": "3.1rem",
            "h3": "2.6rem",
            "h4": "2.3rem",
            "h5": "2.2rem",
            "h6": "2.1rem",
          },
          "weight": Object {
            "default": 100,
          },
        },
      }
    }
    type="info"
  >
    <div
      className="class sc-bdVaJa fAVSWk"
      role="alert"
      type="info"
    >
      Hello
    </div>
  </styled.div>
</Alert>
`;

exports[`Alert snapshot success 1`] = `
<Alert
  className="class"
  type="success"
>
  <styled.div
    className="class"
    role="alert"
    tabindex="-1"
    theme={
      Object {
        "border": Object {
          "radius": Object {
            "edge": "2px",
            "round": "100px",
          },
          "size": "2px",
        },
        "breakpoint": Object {
          "lg": "992px",
          "md": "768px",
          "sm": "576px",
          "xl": "1200px",
          "xs": "0px",
        },
        "color": Object {
          "background": "#ffffff",
          "border": "#2fa4e7",
          "checked": "#2fa4e7",
          "danger": "#c71c22",
          "default": "#2fa4e7",
          "disabled": "#acacac",
          "error": "#c71c22",
          "focus": "#54b4eb",
          "font": "#333333",
          "hover": "#178acc",
          "info": "#04519b",
          "primary": "#2fa4e7",
          "secondary": "#e9ecef",
          "success": "#73a839",
          "tertiary": "#343a40",
          "warning": "#dd5600",
        },
        "font": Object {
          "family": Object {
            "default": "Helvetica, Arial, sans-serif",
          },
          "size": Object {
            "default": "1.8rem",
            "h1": "3.8rem",
            "h2": "3.1rem",
            "h3": "2.6rem",
            "h4": "2.3rem",
            "h5": "2.2rem",
            "h6": "2.1rem",
          },
          "weight": Object {
            "default": 100,
          },
        },
      }
    }
    type="success"
  >
    <div
      className="class sc-bdVaJa ixHSHX"
      role="alert"
      type="success"
    >
      Hello
    </div>
  </styled.div>
</Alert>
`;

exports[`Alert snapshot warning 1`] = `
<Alert
  className="class"
  type="warning"
>
  <styled.div
    className="class"
    role="alert"
    tabindex="-1"
    theme={
      Object {
        "border": Object {
          "radius": Object {
            "edge": "2px",
            "round": "100px",
          },
          "size": "2px",
        },
        "breakpoint": Object {
          "lg": "992px",
          "md": "768px",
          "sm": "576px",
          "xl": "1200px",
          "xs": "0px",
        },
        "color": Object {
          "background": "#ffffff",
          "border": "#2fa4e7",
          "checked": "#2fa4e7",
          "danger": "#c71c22",
          "default": "#2fa4e7",
          "disabled": "#acacac",
          "error": "#c71c22",
          "focus": "#54b4eb",
          "font": "#333333",
          "hover": "#178acc",
          "info": "#04519b",
          "primary": "#2fa4e7",
          "secondary": "#e9ecef",
          "success": "#73a839",
          "tertiary": "#343a40",
          "warning": "#dd5600",
        },
        "font": Object {
          "family": Object {
            "default": "Helvetica, Arial, sans-serif",
          },
          "size": Object {
            "default": "1.8rem",
            "h1": "3.8rem",
            "h2": "3.1rem",
            "h3": "2.6rem",
            "h4": "2.3rem",
            "h5": "2.2rem",
            "h6": "2.1rem",
          },
          "weight": Object {
            "default": 100,
          },
        },
      }
    }
    type="warning"
  >
    <div
      className="class sc-bdVaJa gWYyLn"
      role="alert"
      type="warning"
    >
      Hello
    </div>
  </styled.div>
</Alert>
`;
